# cops

./: .gitignore  LICENSE  LICENSE-DATA  README.md  REPRODUCE.md  pyproject.toml  requirements-steering.txt  requirements.txt
data/: README.md
docs/: COPS_DESIGN.md  COPS_DISAGGREGATION_INSIGHTS.md  COPS_METHODS_V2.md  COPS_RESULTS_PAPER_V2.md  paper_section_oncoco_DRAFT.md
paper/: README.md  main.tex
scripts/: _config.py  ablate_content_preservation_weights.py  analyze_oncoco_label_shift.py  build_cops_contexts.py  build_paper_figures.py  build_paper_tables.py  build_qualitative_figure_pdf.py  classify_responses_oncoco.py  compute_cluster_bootstrap_headline.py  compute_irr.py  compute_layerwise_separability.py  compute_position_matched_persona_vectors.py  compute_transcoder_feature_stats.py  cops_evaluate_steering.py  cops_judge_ensemble.py  cops_judge_steering_eval.py  cops_overlap_check.py  cops_overlap_check_v2.py  cops_overlap_check_v3.py  cops_per_persona_v_open.py  cops_persona_decomposition.py  cops_score_steering_eval.py  cops_style_core_pca.py  cops_submit_layer_sweep.sh  cops_submit_layer_sweep_newmodels.sh  cops_submit_paper_matrix_v2.sh  cops_submit_paper_matrix_v2_negalpha.sh  cops_submit_paper_matrix_v2_newmodels.sh  cops_submit_persona_variants.sh  cops_submit_prompt_baseline.sh  export_axis_comparison_table.py  export_judge_axis_comparison_table.py  export_layer_selection_table.py  export_model_comparison_table.py  extract_instruction_contrast_vectors.py  generate_case_aware_contrast_pairs.py  generate_steering_contrast_dataset.py  (+8 more)
slurm/: README.md
(+1357 files in other folders)
